--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
-  <title>XENEON Edge – Yule Log Widget</title>
+  <title>XENEON Edge – HTML Yule Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -108,7 +108,6 @@
     }
 
     .xeneon-shell::before {
-      /* Subtle XENEON edge glow */
       content: '';
       position: absolute;
       inset: 7px;
@@ -128,93 +127,282 @@
     .display-frame {
       position: relative;
       border-radius: calc(var(--radius-xl) - 6px);
-      background: radial-gradient(circle at 50% 0%, #0b1120, #020617 65%, #000000 100%);
+      background: radial-gradient(circle at 50% 0%, #020617, #000000 65%);
       overflow: hidden;
       border: 1px solid #020617;
       box-shadow:
         inset 0 0 0 1px rgba(15, 23, 42, 0.9),
         0 0 0 1px rgba(15, 23, 42, 0.95);
+      aspect-ratio: 16 / 9;
     }
 
-    /* Responsive video container (works great in iframes) */
-    .video-wrap {
+    /* Scene */
+
+    .scene {
       position: relative;
       width: 100%;
-      padding-top: 56.25%; /* 16:9 */
+      height: 100%;
+      overflow: hidden;
+      background:
+        radial-gradient(circle at 50% 10%, rgba(248, 250, 252, 0.06), transparent 55%),
+        linear-gradient(to bottom, #020617 0%, #020617 40%, #0b1120 100%);
+    }
+
+    .scene::before {
+      /* subtle vignette */
+      content: '';
+      position: absolute;
+      inset: -10%;
+      background:
+        radial-gradient(circle at 50% 120%, transparent 40%, rgba(15, 23, 42, 0.9) 100%);
+      mix-blend-mode: multiply;
+      pointer-events: none;
+    }
+
+    .back-wall {
+      position: absolute;
+      inset: 0 8%;
+      background:
+        linear-gradient(
+          135deg,
+          rgba(15, 23, 42, 0.9),
+          rgba(15, 23, 42, 0.95)
+        );
+      border-radius: 12px 12px 0 0;
+      box-shadow: 0 -20px 40px rgba(0, 0, 0, 0.5) inset;
+    }
+
+    .mantle {
+      position: absolute;
+      left: 6%;
+      right: 6%;
+      top: 18%;
+      height: 10px;
+      border-radius: 999px;
+      background:
+        linear-gradient(180deg, #111827, #020617);
+      box-shadow:
+        0 10px 18px rgba(0, 0, 0, 0.7),
+        0 0 0 1px rgba(15, 23, 42, 0.9);
+    }
+
+    .embers-floor {
+      position: absolute;
+      left: 6%;
+      right: 6%;
+      bottom: 13%;
+      height: 16%;
+      border-radius: 999px;
+      background:
+        radial-gradient(circle at 50% -40%, rgba(148, 163, 184, 0.1), transparent 65%),
+        radial-gradient(circle at 20% 140%, rgba(248, 113, 113, 0.25), transparent 70%),
+        radial-gradient(circle at 80% 140%, rgba(251, 191, 36, 0.22), transparent 70%),
+        radial-gradient(ellipse at 50% 10%, #020617 0, #000 80%);
+      box-shadow:
+        0 20px 40px rgba(0, 0, 0, 0.85);
+    }
+
+    .log {
+      position: absolute;
+      left: 20%;
+      right: 20%;
+      bottom: 18%;
+      height: 18%;
+      border-radius: 999px;
+      background:
+        linear-gradient(110deg, #4b2c20, #2d160f 40%, #3b2419 75%, #1f130e 100%);
+      box-shadow:
+        0 10px 16px rgba(0, 0, 0, 0.9),
+        0 0 0 1px rgba(15, 23, 42, 0.9);
       overflow: hidden;
     }
 
-    .video-wrap iframe,
-    .video-wrap video {
+    .log::before,
+    .log::after {
+      content: '';
       position: absolute;
-      inset: 0;
-      width: 100%;
+      inset: 14% 4%;
+      background-image:
+        repeating-linear-gradient(
+          90deg,
+          rgba(15, 23, 42, 0.35) 0,
+          rgba(15, 23, 42, 0.35) 6px,
+          transparent 7px,
+          transparent 10px
+        );
+      opacity: 0.4;
+    }
+
+    .log::after {
+      inset: 22% 0;
+      opacity: 0.2;
+      filter: blur(1px);
+    }
+
+    .log-shadow {
+      position: absolute;
+      inset: auto 18% 14%;
+      height: 10%;
+      border-radius: 999px;
+      background:
+        radial-gradient(ellipse at 50% 50%, rgba(0, 0, 0, 0.9), transparent 60%);
+      filter: blur(1px);
+      opacity: 0.9;
+      pointer-events: none;
+    }
+
+    /* Flames */
+
+    .flame-stack {
+      position: absolute;
+      left: 50%;
+      bottom: 24%;
+      width: 18%;
+      height: 40%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      pointer-events: none;
+      filter: drop-shadow(0 0 20px rgba(248, 250, 252, 0.65));
+      mix-blend-mode: screen;
+    }
+
+    .flame {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 70%;
       height: 100%;
-      border: none;
-      object-fit: cover;
+      transform: translateX(-50%);
+      transform-origin: 50% 100%;
+      border-radius: 50% 50% 45% 45%;
+      background:
+        radial-gradient(circle at 50% 0%, #fef9c3 0%, #f97316 40%, #ea580c 70%, rgba(0, 0, 0, 0) 80%);
+      animation: flicker-main 1.4s infinite ease-in-out;
+      opacity: 0.95;
     }
 
-    /* Fire mode overlays */
+    .flame-inner {
+      position: absolute;
+      bottom: 6%;
+      left: 50%;
+      width: 55%;
+      height: 80%;
+      transform: translateX(-50%);
+      transform-origin: 50% 100%;
+      border-radius: 50% 50% 40% 40%;
+      background:
+        radial-gradient(circle at 50% 0%, #fefce8 0%, #fdba74 38%, rgba(0, 0, 0, 0) 75%);
+      animation: flicker-inner 1s infinite ease-in-out;
+      opacity: 0.9;
+    }
 
-    .fire-overlay {
+    .flame-glow {
       position: absolute;
       inset: 0;
-      pointer-events: none;
-      mix-blend-mode: screen;
-      transition: opacity var(--transition-med), filter 280ms ease-out;
-    }
-
-    .mode-ember .fire-overlay {
+      border-radius: 50%;
       background:
-        radial-gradient(circle at 20% 90%, rgba(248, 113, 113, 0.3), transparent 70%),
-        radial-gradient(circle at 80% 15%, rgba(251, 191, 36, 0.28), transparent 60%),
-        radial-gradient(circle at 50% 120%, rgba(248, 250, 252, 0.12), transparent 75%);
-      opacity: 0.75;
-      filter: saturate(1.05) brightness(0.95);
+        radial-gradient(circle at 50% 70%, rgba(251, 191, 36, 0.85), transparent 70%);
+      filter: blur(18px);
+      opacity: 0.43;
     }
 
-    .mode-cozy .fire-overlay {
-      background:
-        radial-gradient(circle at 15% 95%, rgba(248, 113, 113, 0.45), transparent 65%),
-        radial-gradient(circle at 80% 10%, rgba(251, 191, 36, 0.5), transparent 65%),
-        radial-gradient(circle at 60% 120%, rgba(248, 250, 252, 0.18), transparent 70%);
-      opacity: 0.96;
-      filter: saturate(1.15) brightness(1.06);
-    }
-
-    .mode-roaring .fire-overlay {
-      background:
-        radial-gradient(circle at 50% 110%, rgba(251, 191, 36, 0.9), transparent 70%),
-        radial-gradient(circle at 10% 10%, rgba(248, 113, 113, 0.7), transparent 65%),
-        radial-gradient(circle at 90% 0%, rgba(56, 189, 248, 0.65), transparent 70%);
-      opacity: 1;
-      filter: saturate(1.25) brightness(1.12);
-    }
-
-    .ember-glow {
+    .spark {
       position: absolute;
-      inset: auto 0 -18%;
-      height: 50%;
+      width: 4px;
+      height: 4px;
+      border-radius: 999px;
+      background: radial-gradient(circle, #fef9c3 0, #fde68a 60%, transparent 100%);
+      opacity: 0.8;
+      animation: rise 2.4s linear infinite;
+    }
+
+    .spark.s2 {
+      left: 35%;
+      animation-duration: 2s;
+      animation-delay: -0.7s;
+      transform: scale(0.7);
+    }
+
+    .spark.s3 {
+      left: 65%;
+      animation-duration: 2.9s;
+      animation-delay: -1.1s;
+      transform: scale(0.9);
+    }
+
+    /* Ember bed */
+
+    .ember-bed {
+      position: absolute;
+      left: 18%;
+      right: 18%;
+      bottom: 19%;
+      height: 8%;
+      border-radius: 999px;
       background:
-        radial-gradient(circle at 50% 120%, rgba(248, 250, 252, 0.12), transparent 55%),
-        radial-gradient(circle at 5% 100%, rgba(248, 113, 113, 0.25), transparent 50%),
-        radial-gradient(circle at 95% 100%, rgba(251, 191, 36, 0.2), transparent 60%);
-      opacity: 0.7;
+        radial-gradient(circle at 20% 50%, rgba(248, 113, 113, 0.6), transparent 60%),
+        radial-gradient(circle at 50% 40%, rgba(251, 191, 36, 0.7), transparent 55%),
+        radial-gradient(circle at 80% 50%, rgba(248, 250, 252, 0.3), transparent 60%);
+      filter: blur(3px);
+      opacity: 0.9;
       mix-blend-mode: screen;
-      pointer-events: none;
-      transition: opacity var(--transition-med);
+      animation: emberPulse 3s infinite ease-in-out;
     }
 
-    .mode-ember .ember-glow {
-      opacity: 0.5;
+    /* Mode-based intensity */
+
+    .mode-ember .flame-stack {
+      filter: drop-shadow(0 0 12px rgba(248, 250, 252, 0.5));
     }
 
-    .mode-cozy .ember-glow {
+    .mode-ember .flame {
+      transform: translateX(-50%) scaleY(0.6);
+      animation-duration: 1.7s;
+      opacity: 0.8;
+    }
+
+    .mode-ember .flame-inner {
+      transform: translateX(-50%) scaleY(0.7);
+      animation-duration: 1.4s;
       opacity: 0.75;
     }
 
-    .mode-roaring .ember-glow {
+    .mode-ember .spark {
+      opacity: 0.4;
+    }
+
+    .mode-ember .ember-bed {
+      opacity: 0.6;
+    }
+
+    .mode-cozy .flame {
+      transform: translateX(-50%) scaleY(0.85);
+    }
+
+    .mode-roaring .flame-stack {
+      filter: drop-shadow(0 0 28px rgba(248, 250, 252, 0.9));
+    }
+
+    .mode-roaring .flame {
+      transform: translateX(-50%) scaleY(1.2);
+      animation-duration: 1s;
+    }
+
+    .mode-roaring .flame-inner {
+      transform: translateX(-50%) scaleY(1.1);
+      animation-duration: 0.85s;
+    }
+
+    .mode-roaring .spark {
       opacity: 1;
+      transform: scale(1) !important;
+    }
+
+    .mode-roaring .ember-bed {
+      opacity: 1;
+      filter: blur(2px);
     }
 
     /* HUD panel */
@@ -373,8 +561,6 @@
         0 0 0 1px rgba(15, 23, 42, 0.75);
     }
 
-    /* Helper text */
-
     .footer-hint {
       font-size: 0.7rem;
       opacity: 0.65;
@@ -405,28 +591,69 @@
         padding-inline: 8px;
       }
     }
+
+    /* Animations */
+
+    @keyframes flicker-main {
+      0%   { transform: translateX(-50%) scaleY(0.9) skewX(0deg);   }
+      30%  { transform: translateX(-50%) scaleY(1.05) skewX(-2deg); }
+      50%  { transform: translateX(-50%) scaleY(1.0) skewX(1deg);   }
+      70%  { transform: translateX(-50%) scaleY(1.08) skewX(-1deg); }
+      100% { transform: translateX(-50%) scaleY(0.95) skewX(0deg);  }
+    }
+
+    @keyframes flicker-inner {
+      0%   { transform: translateX(-50%) scale(0.85); }
+      50%  { transform: translateX(-50%) scale(1.03); }
+      100% { transform: translateX(-50%) scale(0.9);  }
+    }
+
+    @keyframes emberPulse {
+      0%   { opacity: 0.7; }
+      50%  { opacity: 1;   }
+      100% { opacity: 0.7; }
+    }
+
+    @keyframes rise {
+      0% {
+        bottom: 22%;
+        opacity: 0;
+        transform: translateY(0) scale(0.6);
+      }
+      20% {
+        opacity: 0.9;
+      }
+      100% {
+        bottom: 70%;
+        opacity: 0;
+        transform: translateY(-10%) scale(0.6);
+      }
+    }
   </style>
 </head>
 <body>
   <div class="xeneon-widget mode-cozy" id="xeneon-widget">
     <div class="xeneon-shell">
       <div class="display-frame">
-        <div class="video-wrap">
-          <!--
-            Replace the src below with your preferred yule log source.
-            Using a YouTube embed keeps it simple & streamable.
-          -->
-          <iframe
-            src="https://www.youtube.com/embed/L_LUpnjgPso?autoplay=1&mute=1&loop=1&playlist=L_LUpnjgPso&controls=0&modestbranding=1&rel=0"
-            title="Yule Log"
-            allow="autoplay; fullscreen"
-            loading="lazy"
-          ></iframe>
-        </div>
+        <div class="scene">
+          <div class="back-wall"></div>
+          <div class="mantle"></div>
+          <div class="embers-floor"></div>
 
-        <!-- Fire mode overlays -->
-        <div class="fire-overlay"></div>
-        <div class="ember-glow"></div>
+          <div class="log"></div>
+          <div class="log-shadow"></div>
+
+          <div class="flame-stack">
+            <div class="flame-glow"></div>
+            <div class="flame"></div>
+            <div class="flame-inner"></div>
+            <div class="spark s1"></div>
+            <div class="spark s2"></div>
+            <div class="spark s3"></div>
+          </div>
+
+          <div class="ember-bed"></div>
+        </div>
       </div>
     </div>
 
@@ -467,7 +694,7 @@
     </div>
 
     <div class="footer-hint">
-      <span>Tip:</span> Drop this file into an iframe – it’s fully responsive.
+      <span>Tip:</span> Fully HTML/CSS – no video, iframe-friendly.
     </div>
   </div>
 
@@ -490,15 +717,12 @@
         chip.addEventListener('click', () => {
           const mode = chip.dataset.mode;
 
-          // update classes
           widget.classList.remove('mode-ember', 'mode-cozy', 'mode-roaring');
           widget.classList.add(`mode-${mode}`);
 
-          // active visual
           chips.forEach((c) => c.classList.remove('active'));
           chip.classList.add('active');
 
-          // label
           modeLabel.textContent = labelMap[mode] || '';
         });
       });
@@ -510,7 +734,7 @@
         htmlEl.setAttribute('data-theme', next);
       });
 
-      // Optional: respect prefers-color-scheme on first load
+      // Respect prefers-color-scheme on first load
       const prefersLight = window.matchMedia &&
         window.matchMedia('(prefers-color-scheme: light)').matches;
 
