--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       --brick-bright: #b91c1c;
       --brick-deep: #450a0a;
       --mortar: #4b1f1f;
-      --hud-bg: rgba(15, 6, 7, 0.96);
       --hud-border: rgba(248, 113, 113, 0.5);
     }
 
@@ -43,7 +42,6 @@
       --brick-bright: #f97373;
       --brick-deep: #b91c1c;
       --mortar: #fed7d7;
-      --hud-bg: rgba(255, 241, 242, 0.96);
       --hud-border: rgba(248, 113, 113, 0.65);
     }
 
@@ -51,9 +49,13 @@
       box-sizing: border-box;
     }
 
+    html, body {
+      height: 100%;
+    }
+
     body {
       margin: 0;
-      min-height: 100vh;
+      min-height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -81,11 +83,10 @@
       background-position: 0 0, 0 0;
     }
 
-    /* Outer widget - now brick-themed shell */
-
     .xeneon-widget {
       width: 100%;
       max-width: 900px;
+      max-height: 100%;
       border-radius: var(--radius-2xl);
       background:
         linear-gradient(
@@ -101,10 +102,10 @@
       border: 2px solid rgba(248, 113, 113, 0.6);
       position: relative;
       overflow: hidden;
+      box-sizing: border-box;
     }
 
     .xeneon-widget::before {
-      /* subtle sheen */
       content: '';
       position: absolute;
       inset: -30%;
@@ -121,7 +122,6 @@
       border-radius: var(--radius-xl);
       padding: 12px;
       background:
-        /* inner brick bezel */
         repeating-linear-gradient(
           0deg,
           var(--brick-deep) 0,
@@ -140,6 +140,7 @@
       box-shadow:
         inset 0 0 0 1px rgba(15, 6, 7, 0.9),
         0 10px 26px rgba(0, 0, 0, 0.9);
+      min-height: 260px;
     }
 
     .xeneon-shell::before {
@@ -159,13 +160,15 @@
       border-radius: calc(var(--radius-xl) - 10px);
       overflow: hidden;
       border: 1px solid rgba(15, 6, 7, 0.95);
-      aspect-ratio: 16 / 9;
       box-shadow:
         inset 0 0 0 1px rgba(0, 0, 0, 0.9),
         0 0 40px rgba(0, 0, 0, 0.9);
+      /* Resize behavior B: responsive height based on width + viewport */
+      height: clamp(260px, 56.25vw, 70vh);
+      max-height: calc(100vh - 140px); /* leave room for HUD + padding */
     }
 
-    /* Scene with brick */
+    /* Scene */
 
     .scene {
       position: relative;
@@ -173,7 +176,6 @@
       height: 100%;
       overflow: hidden;
       background:
-        /* back brick wall */
         repeating-linear-gradient(
           0deg,
           #3b1010 0,
@@ -192,7 +194,6 @@
     }
 
     .scene::before {
-      /* vignette */
       content: '';
       position: absolute;
       inset: -10%;
@@ -224,8 +225,6 @@
       box-shadow:
         0 20px 40px rgba(0, 0, 0, 0.9);
     }
-
-    /* Ember speckles */
 
     .ember-field {
       position: absolute;
@@ -268,8 +267,6 @@
       mix-blend-mode: screen;
       animation: emberPulse 3s infinite ease-in-out;
     }
-
-    /* Log */
 
     .log {
       position: absolute;
@@ -320,7 +317,7 @@
       pointer-events: none;
     }
 
-    /* Multiple flame stacks */
+    /* Flame row */
 
     .flame-row {
       position: absolute;
@@ -404,7 +401,7 @@
     .spark.s4 { left: 15%; animation-duration: 2.3s; animation-delay: -1.6s; transform: scale(0.7); }
     .spark.s5 { left: 80%; animation-duration: 2.7s; animation-delay: -2.1s; transform: scale(1.1); }
 
-    /* Mode-based intensity & variation */
+    /* Mode variations */
 
     .mode-ember .flame-row {
       filter: drop-shadow(0 0 12px rgba(254, 242, 242, 0.5));
@@ -486,7 +483,7 @@
       filter: blur(2px);
     }
 
-    /* HUD panel – also brick-themed */
+    /* HUD */
 
     .hud {
       margin-top: 10px;
@@ -518,6 +515,49 @@
       align-items: center;
       gap: 10px;
       min-width: 0;
+      flex-wrap: wrap;
+    }
+
+    /* Opulent Hardware pill */
+
+    .brand-pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 0.7rem;
+      text-transform: uppercase;
+      letter-spacing: 0.09em;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(254, 226, 226, 0.85);
+      background:
+        radial-gradient(circle at 0 0, rgba(254, 242, 242, 0.35), transparent 60%),
+        linear-gradient(135deg, rgba(24, 4, 4, 0.95), rgba(127, 29, 29, 0.95));
+      color: #fef2f2;
+      text-decoration: none;
+      white-space: nowrap;
+      transition:
+        background var(--transition-med),
+        transform var(--transition-fast),
+        box-shadow var(--transition-fast),
+        border-color var(--transition-fast);
+    }
+
+    .brand-pill:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 0 16px rgba(248, 250, 252, 0.6);
+      border-color: #fef2f2;
+      background:
+        radial-gradient(circle at 20% 0, rgba(254, 242, 242, 0.5), transparent 60%),
+        linear-gradient(135deg, rgba(127, 29, 29, 1), rgba(185, 28, 28, 1));
+    }
+
+    .brand-pill span.flame-icon {
+      font-size: 0.9rem;
+    }
+
+    .brand-pill span.text-main {
+      font-weight: 600;
     }
 
     .badge {
@@ -561,8 +601,6 @@
       align-items: center;
       gap: 8px;
     }
-
-    /* Mode chips */
 
     .mode-switch {
       display: flex;
@@ -612,8 +650,6 @@
       background:
         radial-gradient(circle at 50% 0, rgba(254, 226, 226, 0.2), transparent 60%);
     }
-
-    /* Theme toggle */
 
     .theme-toggle {
       position: relative;
@@ -685,6 +721,10 @@
 
       .mode-chip {
         padding-inline: 8px;
+      }
+
+      .display-frame {
+        height: clamp(220px, 62vw, 65vh);
       }
     }
 
@@ -793,6 +833,16 @@
 
     <div class="hud">
       <div class="hud-left">
+        <a
+          class="brand-pill"
+          href="https://www.patreon.com/posts/simhub-dash-and-141132267"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="flame-icon">🔥</span>
+          <span class="text-main">Opulent Hardware</span>
+        </a>
+
         <div class="badge">
           <span class="badge-dot"></span>
           Xeneon Edge
@@ -828,7 +878,7 @@
     </div>
 
     <div class="footer-hint">
-      <span>Tip:</span> All brick, all flames – iframe-safe.
+      <span>Tip:</span> Auto-resizes with viewport/iframe – all brick, all flames.
     </div>
   </div>
 
